--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -204,7 +204,9 @@
     <Compile Include="Models\User.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserRegisting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ultilities\Ulti.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
