Sửa lỗi hiển thị khi không có phòng sau khi phân trang+Hiển thị 3 phòng còn trống và 3 phòng đã cho thuê
Sửa lỗi hiển thị khi không có phòng sau khi phân trang+Hiển thị 3 phòng còn trống và 3 phòng đã cho thuê

--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -242,6 +242,8 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Views\Home\_Partial3PhongConTrong.cshtml" />
+    <Content Include="Views\Home\_Partial3PhongDaChoThue.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
