--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -206,6 +206,7 @@
     </Compile>
     <Compile Include="Models\UserRegisting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ultilities\AddHelpers.cs" />
     <Compile Include="Ultilities\Ulti.cs" />
   </ItemGroup>
   <ItemGroup>
