Tạo View cho AddCat
Tạo View cho AddCat

--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -247,6 +247,7 @@
     <Content Include="Views\Home\_Partial3PhongDaChoThue.cshtml" />
     <Content Include="Views\Room\Detail.cshtml" />
     <Content Include="Views\Room\AddRoom.cshtml" />
+    <Content Include="Views\Category\AddCat.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
