--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -43,6 +43,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BotDetect, Version=4.3.0.0, Culture=neutral, PublicKeyToken=74616036388b765f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Captcha.4.3.0\lib\net45\BotDetect.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="BotDetect.Web.Mvc, Version=4.3.0.0, Culture=neutral, PublicKeyToken=74616036388b765f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Captcha.4.3.0\lib\net45\BotDetect.Web.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -204,6 +212,7 @@
     <Compile Include="Models\User.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Models\UserRegisting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ultilities\AddHelpers.cs" />
@@ -223,13 +232,6 @@
     <Content Include="Content\fonts\FontAwesome.otf" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <EntityDeploy Include="Models\QLKSModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>QLKSModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\QLKSModel.edmx.diagram">
-      <DependentUpon>QLKSModel.edmx</DependentUpon>
-    </Content>
     <Content Include="Views\Category\_PartialList.cshtml" />
     <Content Include="Views\Room\ListByCategory.cshtml" />
     <Content Include="Views\ManageRoom\IndexManageRoom.cshtml" />
@@ -248,6 +250,13 @@
     <Content Include="Views\Room\Detail.cshtml" />
     <Content Include="Views\Room\AddRoom.cshtml" />
     <Content Include="Views\Category\AddCat.cshtml" />
+    <EntityDeploy Include="Models\QLKSModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>QLKSModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\QLKSModel.edmx.diagram">
+      <DependentUpon>QLKSModel.edmx</DependentUpon>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
