--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Models\UserRegisting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ultilities\ActionFilters.cs" />
     <Compile Include="Ultilities\AddHelpers.cs" />
     <Compile Include="Ultilities\Ulti.cs" />
   </ItemGroup>
@@ -257,6 +258,8 @@
     <Content Include="Models\QLKSModel.edmx.diagram">
       <DependentUpon>QLKSModel.edmx</DependentUpon>
     </Content>
+    <Content Include="Views\Account\Profile.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
