--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -235,8 +235,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Category\_PartialList.cshtml" />
     <Content Include="Views\Room\ListByCategory.cshtml" />
-    <Content Include="Views\ManageRoom\IndexManageRoom.cshtml" />
-    <Content Include="Views\ManageRoom\IndexManageCategory.cshtml" />
+    <Content Include="Views\ManageRoom\QuanLyRoom.cshtml" />
+    <Content Include="Views\ManageRoom\QuanLyCat.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Content\css\bootstrap-theme.css.map" />
     <Content Include="Content\css\bootstrap-theme.min.css.map" />
