Tạo Layout cho Admin
Tạo Layout cho Admin

--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -260,6 +260,7 @@
     </Content>
     <Content Include="Views\Account\Profile.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\_LayoutManageRoom.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
