--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -261,6 +261,7 @@
     <Content Include="Views\Account\Profile.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Shared\_LayoutManageRoom.cshtml" />
+    <Content Include="Views\ManageRoom\IndexManageRoom.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
