--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -261,8 +261,10 @@
     </Content>
     <Content Include="Views\Account\Profile.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Shared\_LayoutManageRoom.cshtml" />
     <Content Include="Views\ManageRoom\IndexManageRoom.cshtml" />
+    <Content Include="Views\ManageRoom\QuanLyRoom.cshtml" />
+    <Content Include="Views\Shared\_LayoutManageRoom.cshtml" />
+    <Content Include="Views\_ViewStartManageRoom.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
