Tạo View AddRoom cho Admin
Tạo View AddRoom cho Admin

--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -267,6 +267,7 @@
     <Content Include="Views\_ViewStartManageRoom.cshtml" />
     <Content Include="Views\ManageRoom\QuanLyCat.cshtml" />
     <Content Include="Views\ManageRoom\AddCat.cshtml" />
+    <Content Include="Views\ManageRoom\AddRoom.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
