--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Models\Room.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RoomInfo.cs" />
     <Compile Include="Models\User.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
