Chức năng AddCat cho Admin
Chức năng AddCat cho Admin

--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\Category.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CatInfo.cs" />
     <Compile Include="Models\Customer.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
