--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -271,6 +271,7 @@
     <Content Include="Views\ManageRoom\AddCat.cshtml" />
     <Content Include="Views\ManageRoom\AddRoom.cshtml" />
     <Content Include="Views\ManageRoom\UpdateRoom.cshtml" />
+    <Content Include="Views\ManageRoom\UpdateCat.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
