--- a/MVCQLKS/MVCQLKS/MVCQLKS.csproj
+++ b/MVCQLKS/MVCQLKS/MVCQLKS.csproj
@@ -174,6 +174,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageRoomController.cs" />
@@ -185,6 +186,9 @@
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CatInfo.cs" />
+    <Compile Include="Models\Config.cs">
+      <DependentUpon>QLKSModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\CusInfo.cs" />
     <Compile Include="Models\Customer.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
@@ -214,6 +218,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QLKSModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\RegisterError.cs" />
     <Compile Include="Models\Room.cs">
       <DependentUpon>QLKSModel.tt</DependentUpon>
     </Compile>
@@ -286,6 +291,17 @@
     <Content Include="Views\ManageRoom\QuanLyCus.cshtml" />
     <Content Include="Views\ManageRoom\AddCus.cshtml" />
     <Content Include="Views\ManageRoom\UpdateCus.cshtml" />
+    <Content Include="Views\Employ\AddCusChoNV.cshtml" />
+    <Content Include="Views\Employ\CustomerList.cshtml" />
+    <Content Include="Views\Employ\DetailCus.cshtml" />
+    <Content Include="Views\Employ\EditCusChoNV.cshtml" />
+    <Content Include="Views\Admin\IndexAdmin.cshtml" />
+    <Content Include="Views\Shared\_LayoutAdmin.cshtml" />
+    <Content Include="Views\Shared\_ViewStartAdmin.cshtml" />
+    <Content Include="Views\Employ\QuanLyCusBookRoom.cshtml" />
+    <Content Include="Views\Employ\QuanLyCusChoNV.cshtml" />
+    <Content Include="Views\Employ\AddCusBookRoom.cshtml" />
+    <Content Include="Views\Employ\AddCus.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
